[package]
name = "hi_rust"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
extern_common = { path = "extern_common" }
extern_config = { path = "extern_config" }

serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.14"
anyhow = "1.0"
enum-iterator = "1.2.0"
function_name = "0.3.0"

[dependencies.yaml-rust]
git = "https://github.com/chyh1990/yaml-rust.git"
