[package]
name = "hi_rust"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ex_common = { path = "ex_common" }
ex_config = { path = "ex_config" }
ex_net = { path = "ex_net" }

serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.14"
anyhow = "1.0"
enum-iterator = "1.2.0"
function_name = "0.3.0"
chrono = "0.4"
network-interface = "0.1.4"
rocket = "0.4.10"
futures = "0.3.25"
tokio = "1.21.2"
ctrlc = "3.2.3"
libc = "0.2.137"

[dev-dependencies]

