[package]
name = "hi_rust"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ex_common = { path = "ex_common" }
ex_config = { path = "ex_config" }
ex_net = { path = "ex_net" }
ex_util = { path = "ex_util" }
ex_database = { path = "ex_database" }
ex_rabbitmq = { path = "ex_rabbitmq" }

serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.14"
serde_json = "1.0.89"
anyhow = "1.0"
enum-iterator = "1.2.0"
function_name = "0.3.0"
chrono = { version = "0.4.11", features = ["serde"] }
network-interface = "1.0.1"
rocket = "0.5.0-rc.3"
futures = "0.3.25"
tokio = "1.21.2"
ctrlc = "3.2.3"
libc = "0.2.137"
redis = "0.23.0"
r2d2 = "0.8.10"
lapin = "2.1.1"
spin = "0.9.4"
sqlx = { version = "0.7.1", features = [ "runtime-tokio-rustls", "mysql", "chrono" ] }


[dev-dependencies]

