[package]
name = "ex_database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ex_config = { path = "../ex_config" }

redis = "0.22.1"
anyhow = "1.0"
r2d2 = { version = "0.8.10" }
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls" ] }
