[package]
name = "ex_rabbitmq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ex_common = { path = "../ex_common" }
ex_config = { path = "../ex_config" }
ex_util = { path = "../ex_util" }

anyhow = "1.0"
lapin = "2.1.1"
tokio = "1.21.2"
futures = "0.3"